force-app/main/default/objects/AG_Assessment__c/fields/AG_Answer__c.field-meta.xml
<CustomField>
    <fullName>AG_Answer__c</fullName>
    <label>Answer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>