force-app/main/default/objects/AG_Assessment__c/fields/AG_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>AG_Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>