force-app/main/default/objects/AG_Assessment__c/fields/AG_Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>AG_Assessment_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>AG_Assessment_Questions__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>