force-app/main/default/objects/AG_Assessment__c/fields/AG_Drug_Using_Duration__c.field-meta.xml
<CustomField>
    <fullName>AG_Drug_Using_Duration__c</fullName>
    <label>Drug Using Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 2 years</fullName>
            </value>
            <value>
                <fullName>More than 2 years</fullName>
            </value>
            <value>
                <fullName>More than 3 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>