force-app/main/default/objects/AG_Assessment__c/fields/AG_Education_Details__c.field-meta.xml
<CustomField>
    <fullName>AG_Education_Details__c</fullName>
    <label>Education Details</label>
    <type>TextArea</type>
</CustomField>