force-app/main/default/objects/AG_Assessment__c/fields/AG_Intake__c.field-meta.xml
<CustomField>
    <fullName>AG_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>AG_Intake__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>