force-app/main/default/objects/AG_Assessment__c/fields/AG_Is_Drug_Addict__c.field-meta.xml
<CustomField>
    <fullName>AG_Is_Drug_Addict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Drug Addict?</label>
    <type>Checkbox</type>
</CustomField>