force-app/main/default/objects/AG_Assessment__c/fields/AG_Is_Homeless__c.field-meta.xml
<CustomField>
    <fullName>AG_Is_Homeless__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Homeless?</label>
    <type>Checkbox</type>
</CustomField>