force-app/main/default/objects/AG_Assessment__c/fields/AG_Pshycology_Details__c.field-meta.xml
<CustomField>
    <fullName>AG_Pshycology_Details__c</fullName>
    <label>Pshycology Details</label>
    <type>TextArea</type>
</CustomField>