force-app/main/default/objects/AG_Assessment__c/fields/AG_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>AG_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>AG_Service_Request__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>